--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -56,6 +56,21 @@
     .gapContain {
       display: flex;
       gap: 120px;
+      select {
+        width: 157.6px;
+        height: 22px;
+      }
+    }
+
+    .add {
+      width: 100%;
+      display: flex;
+      justify-content: end;
+      align-items: center;
+      margin-top: 10px;
+      .clearIcon {
+        margin-right: 10px;
+      }
     }
     .needContain {
       margin: 12px auto;
@@ -132,6 +147,22 @@
         color: $mainClrW;
         @include submitBtn($focusClrG);
       }
+    }
+  }
+  .submitBtn {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    .submit {
+      display: flex;
+      justify-content: center;
+      border: 1px solid $subClrBrown;
+      background-color: $header;
+      border-radius: 10px;
+      margin: 30px 0;
+      padding: 5px 10px;
+      cursor: pointer;
+      color: aliceblue;
     }
   }
 }
