--- a/src/styles/caseManagement/_caseManagement.scss
+++ b/src/styles/caseManagement/_caseManagement.scss
@@ -8,11 +8,12 @@
   font-size: 12px;
   .sortSelect {
     // background: lemonchiffon;
-    padding: 30px 20px 10px 20px;
+    padding: 30px 0px 10px 0px;
     display: flex;
     justify-content: space-between;
     .bothFilter {
       display: flex;
+      justify-content: flex-start;
     }
   }
   .caseContain {
