--- a/src/styles/count/_countPage.scss
+++ b/src/styles/count/_countPage.scss
@@ -53,12 +53,12 @@
       font-weight: 600;
     }
     .allTit {
-      display: inline;
       padding: 5px;
       font-size: 14px;
       background: $focusClrG;
       color: #fff;
       border-radius: 3px;
+      margin-right: 20px;
     }
   }
 }
