--- a/src/Application/_index.scss
+++ b/src/Application/_index.scss
@@ -200,10 +200,16 @@
         }
       }
     }
-    .textarea {
-      // width: 200px;
-      resize: none;
+    .textareaGap {
+      width: 70%;
+      margin-top: 15px;
+      .textarea {
+        width: 100%;
+        height: 80px;
+        resize: none;
+      }
     }
+
     .ps {
       width: 70%;
       justify-content: start;
