--- a/src/Permissions/_index.scss
+++ b/src/Permissions/_index.scss
@@ -11,66 +11,139 @@
   box-sizing: border-box;
 }
 
-.background {
-  width: 70%;
-  margin-top: 3%;
+// .background {
+//   width: 70%;
+//   margin-top: 3%;
 
-  .permissions {
-    background-color: $navBar;
+//   .permissions {
+//     background-color: $navBar;
+//     display: flex;
+//     gap: 10px;
+//     justify-content: center;
+//     // height: 30px;
+//     .container {
+//       display: flex;
+//       align-items: center;
+
+//       .select {
+//         margin-right: 5px;
+//         width: 46px;
+//         display: flex;
+//         justify-content: end;
+//         white-space: nowrap;
+//       }
+//     }
+//     .btn {
+//       border: 1px solid $subClrBrown;
+//       background-color: $header;
+//       border-radius: 10px;
+//       margin: 0 15px;
+//       padding: 4px 5px;
+//       white-space: nowrap;
+//       cursor: pointer;
+//       color: aliceblue;
+//     }
+//   }
+//   .container1 {
+//     margin: 20px 0;
+//     padding-left: 0;
+//     padding-right: 0;
+//     .vector {
+//       width: 100%;
+//       border-top: 2px solid black;
+//     }
+//     .mt {
+//       margin: 15px 0;
+//     }
+//     .row {
+//       background-color: #29d7d7;
+//       align-items: center;
+//       .getPermissions {
+//         white-space: nowrap;
+//       }
+//       .btn {
+//         border: 1px solid $subClrBrown;
+//         background-color: $header;
+//         border-radius: 10px;
+//         margin: 0 15px;
+//         padding: 4px 5px;
+//         white-space: nowrap;
+//         cursor: pointer;
+//         color: aliceblue;
+//       }
+//     }
+//   }
+// }
+
+.caseContainer {
+  max-width: 95%;
+  height: calc(100vh - 70px);
+  //   background: rgb(231, 190, 151);
+  margin: 0 auto;
+  font-size: 12px;
+  .sortSelect {
+    // background: lemonchiffon;
+    padding: 30px 0px 10px 0px;
     display: flex;
-    gap: 10px;
-    justify-content: center;
-    // height: 30px;
-    .container {
+    justify-content: space-between;
+    .bothFilter {
       display: flex;
-      align-items: center;
-
-      .select {
-        margin-right: 5px;
-        width: 46px;
-        display: flex;
-        justify-content: end;
-        white-space: nowrap;
-      }
-    }
-    .btn {
-      border: 1px solid $subClrBrown;
-      background-color: $header;
-      border-radius: 10px;
-      margin: 0 15px;
-      padding: 4px 5px;
-      white-space: nowrap;
-      cursor: pointer;
-      color: aliceblue;
+      justify-content: flex-start;
     }
   }
-  .container1 {
-    margin: 20px 0;
-    padding-left: 0;
-    padding-right: 0;
-    .vector {
-      width: 100%;
-      border-top: 2px solid black;
+  .caseContain {
+    margin: 20px auto 0;
+
+    tbody :hover {
+      background: #eee;
     }
-    .mt {
-      margin: 15px 0;
-    }
-    .row {
-      background-color: #29d7d7;
-      align-items: center;
-      .getPermissions {
-        white-space: nowrap;
+    thead,
+    tbody {
+      border-bottom: 1px solid #ccc;
+      text-align: center;
+      th {
+        padding: 10px 15px;
+        font-size: 14px;
+        .arrow {
+          font-size: 2rem;
+          cursor: pointer;
+        }
       }
-      .btn {
-        border: 1px solid $subClrBrown;
-        background-color: $header;
-        border-radius: 10px;
-        margin: 0 15px;
-        padding: 4px 5px;
-        white-space: nowrap;
+      td {
+        padding: 15px;
+        .icons {
+          width: 40px;
+          height: 20px;
+          cursor: pointer;
+        }
+        .eyeBcg {
+          color: pink;
+        }
+      }
+
+      .viewList {
         cursor: pointer;
-        color: aliceblue;
+        background: $mainClrW;
+        color: $focusClrG;
+        border: 1px solid $focusClrG;
+        padding: 5px 6px;
+        border-radius: 3px;
+        transition: 0.3s;
+        &:hover {
+          background: $focusClrG;
+          color: #fff;
+        }
+      }
+
+      .sortBtn {
+        @include flexCenter;
       }
     }
+  }
+  .page {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    margin-top: 20px;
   }
 }
