--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -60,6 +60,11 @@
         width: 157.6px;
         height: 22px;
       }
+      .hide-arrows::-webkit-outer-spin-button,
+      .hide-arrows::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
     }
 
     .add {
@@ -69,11 +74,11 @@
       align-items: center;
       margin-top: 20px;
       margin-bottom: -10px;
-      span{
+      span {
         opacity: 0;
         color: $focusClrG;
       }
-      .view{
+      .view {
         opacity: 1;
       }
       .clearIcon {
@@ -201,6 +206,15 @@
             color: $focusClrG;
           }
         }
+      }
+    }
+    .textareaGap {
+      width: 100%;
+      margin-top: 15px;
+      .textarea {
+        width: 100%;
+        height: 80px;
+        resize: none;
       }
     }
     .selectContain {
