--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,13 +1,12 @@
 // color
 $mainClrW: #fff;
 $subClrBrown: #817161;
-$focusClrY: #F2AC33;
-$focusClrG: #1F9998;
-$focusClrB: #221E73;
+$focusClrY: #f2ac33;
+$focusClrG: #1f9998;
+$focusClrB: #221e73;
 $bcgBlock: #00000080;
-$header:#817161;
-$navBar:#c09e8280;
-
+$header: #817161;
+$navBar: #c09e8280;
 
 @mixin flexCenter {
   display: flex;
@@ -40,6 +39,7 @@ $navBar:#c09e8280;
   overflow: auto;
   &::-webkit-scrollbar {
     width: 7px;
+    // cursor: pointer;
     //   height: 3px;
   }
   &::-webkit-scrollbar-thumb {
