--- a/src/styles/caseManagement/_checkStatePage.scss
+++ b/src/styles/caseManagement/_checkStatePage.scss
@@ -8,31 +8,30 @@
   z-index: 20;
   font-size: 12px;
   @include flexCenter;
-  .close {
-    position: absolute;
-    top: 15%;
-    right: 20%;
-    background: $focusClrG;
-    z-index: 30;
-    color: $mainClrW;
-    padding: 6px 12px;
-    border-radius: 3px;
-    cursor: pointer;
-  }
+
   .checkStateContain {
     position: relative;
-    width: 50%;
-    height: 70%;
+    width: 60%;
+    height: 90%;
     background: $mainClrW;
-    padding: 20px;
+    padding: 5px 20px 20px;
     @include scrollbar;
+    .close {
+      position: absolute;
+      z-index: 30;
+      top: 1%;
+      right: 1%;
+      font-size: 1.2rem;
+      cursor: pointer;
+    }
     .title {
       text-align: center;
-      font-size: 20px;
+      font-size: 24px;
       font-weight: 600;
-      background: $subClrBrown;
-      color: $mainClrW;
       padding: 8px;
+      border-bottom: 1px solid #ccc;
+      color: $subClrBrown;
+      // background: lightblue;
     }
     .checkStateTable {
       margin: 20px auto;
@@ -55,6 +54,67 @@
       }
       tbody :hover {
         background: #eee;
+      }
+    }
+    .handleStatus {
+      margin: 10px auto;
+      // background: lemonchiffon;
+      height: 75%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      @include scrollbarContain;
+
+      .msgContainer {
+        // background: lightcoral;
+        width: 90%;
+        margin-top: 10px;
+        .msgContain {
+          text-align: justify;
+          border: 2px solid $focusClrG;
+          background: $mainClrW;
+          border-radius: 3px;
+          padding: 5px;
+          word-break: break-all;
+        }
+        .time {
+          text-align: end;
+          padding-top: 3px;
+          color: #aaa;
+        }
+        .handler {
+          text-align: start;
+          color: #aaa;
+        }
+      }
+    }
+    .noneHight {
+      height: 85%;
+    }
+    .chatBarContain {
+      // background: lemonchiffon;
+      width: 95%;
+      position: absolute;
+      transform: translateX(-50%);
+      left: 50%;
+      bottom: 3%;
+      // margin: 8px auto 0;
+      @include flexCenter;
+      .submitMsg {
+        resize: none;
+        border: 1.5px solid $subClrBrown;
+        border-radius: 3px;
+        width: 100%;
+        padding: 3px;
+        @include scrollbarContain;
+      }
+      .submitIcon {
+        font-size: 2rem;
+        margin: 0 5px;
+      }
+      .submitTrue {
+        color: $subClrBrown;
+        cursor: pointer;
       }
     }
   }
