--- a/src/styles/count/_countPage.scss
+++ b/src/styles/count/_countPage.scss
@@ -32,6 +32,7 @@
     //   background: lemonchiffon;
     @include scrollbar;
     height: 72%;
+    padding: 0 10px;
 
     .countContainer {
       margin-bottom: 30px;
