--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -31,13 +31,22 @@
     border-radius: 5px;
     cursor: pointer;
   }
+  .statusFormTit {
+    max-width: 70%;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 16px;
+    color: $subClrBrown;
+    font-weight: 600;
+  }
   .statusFormContainer {
     background: $subClrBrown;
     max-width: 70%;
     margin: 0 auto;
     padding: 8px 8px 0;
-    height: 200px;
-    border: 1px solid #ddd;
+    height: 250px;
+    border: 3px solid #ccc;
+    border-radius: 5px;
     @include scrollbarContain;
     .statusFormContain {
       background: $mainClrW;
@@ -92,18 +101,33 @@
     .needContain {
       margin: 12px auto;
       padding: 5px;
-      background: #fffacdb6;
+      // background: #fffacdb6;
+
       .needTit {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        .title {
-          color: $mainClrW;
-          background: $focusClrG;
-          border-radius: 2px;
-          margin-left: 5px;
-          padding: 1px;
+        .checkInput {
+          display: flex;
+          align-items: center;
+          padding-right: 5px;
         }
+        .needCount {
+          display: flex;
+          align-items: center;
+          background: $subClrBrown;
+          width: 100%;
+          font-size: 14px;
+
+          .title {
+            color: $mainClrW;
+            // background: $focusClrG;
+            border-radius: 2px;
+            margin-left: 5px;
+            padding: 1px;
+          }
+        }
+
         .delNeedIcon {
           cursor: pointer;
           font-size: 1rem;
@@ -162,6 +186,12 @@
             margin-right: 10px;
           }
         }
+      }
+      .fileTit {
+        background: $subClrBrown;
+        font-size: 14px;
+        color: $mainClrW;
+        padding: 0.5px 6px;
       }
       .two {
         display: flex;
@@ -240,11 +270,8 @@
       .confirmBtn {
         @include submitBtn(#ccc);
       }
-      .finishBtn {
-        color: $mainClrW;
-        @include submitBtn($focusClrG);
-      }
     }
+
     .cancle {
       display: flex;
       justify-content: center;
@@ -269,5 +296,12 @@
       cursor: pointer;
       color: aliceblue;
     }
+  }
+}
+.fBtn {
+  text-align: center;
+  .finishBtn {
+    color: $mainClrW;
+    @include submitBtn($focusClrG);
   }
 }
