--- a/src/Permissions/_index.scss
+++ b/src/Permissions/_index.scss
@@ -75,7 +75,7 @@
 //   }
 // }
 
-.caseContainer {
+.permissionsContainer {
   max-width: 95%;
   height: calc(100vh - 70px);
   //   background: rgb(231, 190, 151);
