--- a/src/styles/caseManagement/_caseManagement.scss
+++ b/src/styles/caseManagement/_caseManagement.scss
@@ -19,11 +19,11 @@
   .caseContain {
     margin: 20px auto 0;
 
-    tbody :hover {
+    .body :hover {
       background: #eee;
     }
     thead,
-    tbody {
+    .body {
       border-bottom: 1px solid #ccc;
       text-align: center;
       th {
@@ -86,13 +86,16 @@
     align-items: end;
     margin-top: 20px;
   }
-  .noData{
+  .noData {
     // background: lavenderblush;
-    // width: 300px;
-    // margin: 0 auto;
     font-size: 14px;
     color: $focusClrG;
-    display: flex;
-    justify-content: center;
+    text-align: center;
+    .noTd {
+      padding: 15px;
+      &:hover {
+        // background: $mainClrW;
+      }
+    }
   }
 }
