--- a/src/Permissions/_index.scss
+++ b/src/Permissions/_index.scss
@@ -81,14 +81,14 @@
   //   background: rgb(231, 190, 151);
   margin: 0 auto;
   font-size: 12px;
-  .sortSelect {
+  .sortSelect1 {
     // background: lemonchiffon;
     padding: 30px 0px 10px 0px;
     display: flex;
-    justify-content: space-between;
-    .bothFilter {
+    justify-content: center;
+    .bothFilter1 {
       display: flex;
-      justify-content: flex-start;
+      justify-content: center;
     }
   }
   .caseContain {
