--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -95,7 +95,7 @@ text-align: center;
     .outGap {
       border: 2px solid $subClrBrown;
       width: 84%;
-      margin-bottom: 10px;
+      margin-top: 10px;
       .gapContain {
         display: flex;
         gap: 120px;
