--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -216,7 +216,7 @@ text-align: center;
           }
         }
         div {
-          display: flex;
+          // display: flex;
           div {
             margin-right: 10px;
           }
