--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -276,10 +276,12 @@ text-align: center;
     .textareaGap {
       width: 100%;
       margin-top: 15px;
+      font-size: 14px;
       .textarea {
         width: 100%;
         height: 80px;
         resize: none;
+        
       }
     }
     .selectContain {
