--- a/src/Header/_index.scss
+++ b/src/Header/_index.scss
@@ -4,7 +4,9 @@
 .navTop {
   width: 100%;
   height: 70px;
-  background-color: $header;
+  // background-color: $header;
+  background-image: url('../assets/q-and-a-2453376_1920.jpg');
+  background-position: center;
   display: flex;
   align-items: center;
   justify-content: space-between;
