--- a/src/styles/caseDetail/_caseDetail.scss
+++ b/src/styles/caseDetail/_caseDetail.scss
@@ -39,7 +39,7 @@
     height: 95%;
     background: $mainClrW;
     padding: 0 20px;
-    border: 1px solid #ccc;
+    // border: 1px solid #ccc;
     nav {
       ul {
         @include flexCenter;
