--- a/src/Header/_index.scss
+++ b/src/Header/_index.scss
@@ -4,10 +4,10 @@
 .navTop {
   width: 100%;
   height: 70px;
-  // background-color: $header;
-  background-image: url('../assets/call-center-2275745_1920.jpg');
-  background-position: 50% 45%;
-  background-size: 80% auto;
+  background-color: $header;
+  // background-image: url('../assets/call-center-2275745_1920.jpg');
+  // background-position: 50% 45%;
+  // background-size: 80% auto;
   // filter: blur(2px);
   display: flex;
   align-items: center;
