--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -43,8 +43,9 @@
         background: $focusClrY;
         text-align: center;
         padding: 5px;
-        margin-top: 10px;
+        // margin-top: 10px;
         border-radius: 4px;
+        margin: 10px ;
         cursor: pointer;
       }
     }
@@ -355,7 +356,8 @@
   width: 85%;
   font-size: 14px;
   margin: 0 auto;
-  background: $focusClrY;
+  background: $subClrBrown;
+  color: $mainClrW;
   text-align: center;
   padding: 5px;
   margin-top: 10px;
