--- a/src/Application/_index.scss
+++ b/src/Application/_index.scss
@@ -194,6 +194,7 @@
         color: aliceblue;
         background-color: $header;
         padding-left: 5px;
+        white-space: nowrap;
         .fileIcon {
           align-items: center;
           .clearIcon {
