--- a/src/HeaderLeft/_index.scss
+++ b/src/HeaderLeft/_index.scss
@@ -10,6 +10,7 @@
   background-size: 90% auto;
   align-items: center;
   justify-content: space-between;
+  background-repeat: no-repeat;
   // filter: blur(2px);
   // opacity: ;
 }
