--- a/src/styles/logIn/_logIn.scss
+++ b/src/styles/logIn/_logIn.scss
@@ -1,8 +1,8 @@
 @import '../variable';
 
 .logInContainer {
-  // background: #c09e82;
-  background-image: url('../../assets/q-and-a-2453376_1920.jpg');
+  background: #c09e82;
+  // background-image: url('../../assets/q-and-a-2453376_1920.jpg');
   background-position: center;
   width: 100vw;
   height: 100vh;
