--- a/src/styles/caseDetail/_applicationForm.scss
+++ b/src/styles/caseDetail/_applicationForm.scss
@@ -22,17 +22,15 @@
   @include scrollbar;
   .checkBtn {
     // background: lemonchiffon;
-    width: fit-content;
+    // width: fit-content;
     margin: 0 auto 20px;
     font-size: 16px;
     font-weight: 600;
     border: 1px solid $subClrBrown;
     border-radius: 3px;
     padding: 5px;
-    // width: 70%;
-    //   width: 100%;
-    // min-width: 560px;
     text-align: center;
+    max-width: 85%;
     .check {
       display: flex;
       align-items: center;
@@ -43,9 +41,8 @@
         background: $focusClrY;
         text-align: center;
         padding: 5px;
-        // margin-top: 10px;
         border-radius: 4px;
-        margin: 10px ;
+        margin: 10px;
         cursor: pointer;
       }
     }
