--- a/src/Header/_index.scss
+++ b/src/Header/_index.scss
@@ -1,4 +1,3 @@
-@import '../../src/styles/global.scss';
 @import '../../src/styles/_variable.scss';
 
 .navTop {
@@ -23,7 +22,7 @@
 .between {
   display: flex;
 
-  .navRight {
+  .navLeft {
     width: 200px;
     min-width: 200px;
     height: calc(100vh - 70px);
@@ -56,7 +55,7 @@
       }
     }
   }
-  .left {
+  .navRight {
     width: calc(100vw - 200px);
     min-width: 560px;
     display: flex;
