--- a/src/Application/_index.scss
+++ b/src/Application/_index.scss
@@ -200,8 +200,7 @@
             margin-right: 10px;
           }
         }
-        div {
-          display: flex;
+        .fileColumn {
           div {
             margin-right: 10px;
           }
