--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import './styles/_global.scss';
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
