--- a/src/Application/_index.scss
+++ b/src/Application/_index.scss
@@ -1,14 +1,5 @@
 @import '../../src/styles/_variable.scss';
-@mixin maxWidth {
-  margin: 0 auto;
-  width: 90%;
-}
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
 .scroll {
   width: 100%;
   min-width: 560px;
@@ -22,7 +13,7 @@
 
     h3 {
       font-weight: bold;
-      margin-top: 15px;
+      margin-top:$marage10;
     }
     .vector {
       width: 80%;
@@ -34,7 +25,7 @@
       justify-content: space-between;
       width: 70%;
       div {
-        margin-top: 10px;
+        margin-top: $marage10;
       }
       .gap {
         margin-left: 5px;
@@ -47,7 +38,7 @@
         height: 100px;
       }
       .handler {
-        width: 250px;
+        width: $columWidth;
         text-align: center;
         height: 28px;
         .form-check {
@@ -61,7 +52,7 @@
         margin: 0;
       }
       .otherText {
-        margin-top: 10px;
+        margin-top:$marage10;
         display: block;
       }
       .disNone {
@@ -130,13 +121,13 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-top: 10px;
+      margin-top: $marage10;
       .clearIcon {
         margin-right: 10px;
       }
       span {
         opacity: 0;
-        color: $focusClrY;
+        color:$focusClrY;
       }
       .view {
         opacity: 1;
@@ -162,7 +153,7 @@
           justify-content: space-between;
           align-items: center;
           background-color: $header;
-          color: aliceblue;
+          color: $mainClrW;
           padding-left: 5px;
           div {
             margin-top: 2px;
@@ -175,7 +166,7 @@
 
         & div {
           display: flex;
-          margin-top: 10px;
+          margin-top:$marage10;
           .input {
             width: 100%;
           }
@@ -186,7 +177,7 @@
       width: 70%;
       justify-content: start;
 
-      margin-top: 10px;
+      margin-top: $marage10;
       .fileName {
         display: flex;
         justify-content: space-between;
@@ -197,12 +188,12 @@
         .fileIcon {
           align-items: center;
           .clearIcon {
-            margin-right: 10px;
+            margin-right: $marage10;
           }
         }
         .fileColumn {
           div {
-            margin-right: 10px;
+            margin-right: $marage10;
           }
         }
       }
@@ -210,7 +201,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-top: 5px;
+        margin-top: $marage10;
         .addUploadContainer {
           display: flex;
           align-items: center;
@@ -253,7 +244,7 @@
     }
     .textareaGap {
       width: 70%;
-      margin-top: 15px;
+      margin-top: $marage10;
       .textarea {
         width: 100%;
         height: 80px;
@@ -265,7 +256,7 @@
       width: 70%;
       justify-content: start;
       // background-color: rgb(231, 246, 22);
-      margin-top: 15px;
+      margin-top: $marage10;
       font-weight: bold;
     }
     .submitBtn {
@@ -277,9 +268,9 @@
         justify-content: center;
         border: 1px solid $subClrBrown;
         background-color: $header;
-        border-radius: 10px;
+        border-radius: $borderRadius;
         margin: 30px 0;
-        padding: 5px 10px;
+        padding: $padding5;
         cursor: pointer;
         color: aliceblue;
       }
