--- a/src/Header/_index.scss
+++ b/src/Header/_index.scss
@@ -12,11 +12,17 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 10px;
-  h3 {
-    color: rgb(255, 255, 255);
+  .mobile {
+    display: flex;
+    align-items: center;
+    .titleH3 {
+      color: $mainClrW;
+      font-size: clamp(12px, 4vw, $containerTit28);
+    }
   }
+
   .logOut {
-    color: rgb(255, 255, 255);
+    color: $mainClrW;
   }
 }
 .between {
