--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -6,8 +6,8 @@ $focusClrG: #1f9998;
 $focusClrB: #221e73;
 $bcgBlock: #00000080;
 $header: #817161;
-$navBar: #c09e8280;
-
+$navBarPc: #c09e8280;
+$navBarMobile: #c09e82;
 
 
 // textStyles
